kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: show-case
  name: show-case
