kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: show-case
  name: show-case-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: show-case
