kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: show-case-ingress
  namespace: show-case
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: camille.app
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: show-case-svc
              port:
                number: 80
  tls:
  - hosts:
    - camille.app
    secretName: show-case-ssl
